@@ -402,22 +402,22 @@ PHP_METHOD(mapObj, __set)
     
     php_map = (php_map_object *) zend_object_store_get_object(zobj TSRMLS_CC);
 
-    IF_GET_STRING("name", php_map->map->name)
-    else IF_GET_LONG("status",  php_map->map->status)
-    else IF_GET_LONG("debug", php_map->map->debug)
-    else IF_GET_LONG("width", php_map->map->width)
-    else IF_GET_LONG("height", php_map->map->height)
-    else IF_GET_LONG("maxsize", php_map->map->maxsize)
-    else IF_GET_DOUBLE("resolution", php_map->map->resolution)
-    else IF_GET_DOUBLE("defresolution", php_map->map->defresolution)
-    else IF_GET_DOUBLE("cellsize", php_map->map->cellsize)
-    else IF_GET_LONG("units", php_map->map->units)
-    else IF_GET_DOUBLE("scaledenom", php_map->map->scaledenom)
-    else IF_GET_STRING("shapepath", php_map->map->shapepath)
-    else IF_GET_LONG("keysizex", php_map->map->legend.keysizex)
-    else IF_GET_LONG("keysizey", php_map->map->legend.keysizey)
-    else IF_GET_LONG("keyspacingx", php_map->map->legend.keyspacingx)
-    else IF_GET_LONG("keyspacingy", php_map->map->legend.keyspacingy)
+    IF_SET_STRING("name", php_map->map->name, value)
+    else IF_SET_LONG("status",  php_map->map->status, value)
+    else IF_SET_LONG("debug", php_map->map->debug, value)
+    else IF_SET_LONG("width", php_map->map->width, value)
+    else IF_SET_LONG("height", php_map->map->height, value)
+    else IF_SET_LONG("maxsize", php_map->map->maxsize, value)
+    else IF_SET_DOUBLE("resolution", php_map->map->resolution, value)
+    else IF_SET_DOUBLE("defresolution", php_map->map->defresolution, value)
+    else IF_SET_DOUBLE("cellsize", php_map->map->cellsize, value)
+    else IF_SET_LONG("units", php_map->map->units, value)
+    else IF_SET_DOUBLE("scaledenom", php_map->map->scaledenom, value)
+    else IF_SET_STRING("shapepath", php_map->map->shapepath, value)
+    else IF_SET_LONG("keysizex", php_map->map->legend.keysizex, value)
+    else IF_SET_LONG("keysizey", php_map->map->legend.keysizey, value)
+    else IF_SET_LONG("keyspacingx", php_map->map->legend.keyspacingx, value)
+    else IF_SET_LONG("keyspacingy", php_map->map->legend.keyspacingy, value)
     else if ( (STRING_EQUAL("outputformat", property)) ||
               (STRING_EQUAL("extent", property)) ||
               (STRING_EQUAL("web", property)) ||
